src/views/main.css
body {
    background-size: 100%;
    background-repeat: no-repeat;
}
button.btn.btn-primary {
    background-color: #A37774;
    color: black;
    border-color: #E0AC9D;
}
button.btn.btn-primary:hover {
    background-color: #E88873;
}
a:hover {
    color: #E88873;
}
.marketPlaceIcons {
    color:#E0AC9D;
}
.marketPlaceIcons:hover {
    cursor: pointer;
    color:#E88873;
}
.marketplaceYesNoIcons:hover {
    cursor: pointer;
    
}
.marketplaceIconsSpacingDiv {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.pageWrap {
    padding-top: 18%;
    padding-bottom: 5%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    margin-bottom:3%;
    /* min-height: 95vh; */
}
.secondaryPageWrapper {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    flex-wrap: wrap;
}
.card {
    margin: 2%;
    width: 30%;
    /* height: 25vh; */
    border-radius: .25em;
}
.homeCard {
    width: 40%;
}
.card-body {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.cardBody {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.cardInnerDiv {
    border: 1px solid #E0AC9D;
    border-radius: .25em;
    padding: 2%;
    text-align: center;
    height: 100%;
    width: 80%;
}
.cardInnerDiv ul {
    list-style: none;
    align-items: left;
    text-align: left;
}
.cardInnerDiv ul li {
    padding-bottom: 5px;
    padding-top: 5px;
}

.featuredSwiper img {
    width: 90%;
}
.swiper-pagination {
    transform: translateY(50px);
}
.swiper-pagination-bullet {
    margin-top: 50px;
    background-color: #E88873;
}

.marketPlaceCard {
    width: 85%;
}
svg.uploadPlusSign {
    fill: #E0AC9D;
    margin: 5%;
}

svg.uploadPlusSign:hover {
    fill: #E88873;
    cursor: pointer;
}

.storeImgPlaceholder {
    max-width:50%;
    padding-bottom: 3%;
}
input[type=radio]{
    display: none;
}
.star {
    cursor: pointer;
}
.ratingComponent {
    padding: 2.5%;
}
#marketplaceTable {
    width: 100%;
}
#marketplaceTable td {
    padding: 5px;
}
#reviewCard {
    width: 45%;
}
#reviewCardInnerDiv {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
#purchaseHistory{
    width: 80%;
}
#purchaseHistoryTable {
    width: 100%;
}
.reviewImgWindow {
    width: 150px;
    border: 2px solid #E0AC9D;
    border-radius: 5%;
    padding: 5px;
}
.reviewImgWindow a {
    text-decoration: none;
    font-size: large;
    color: #E0AC9D;
}
.reviewImgWindow a:hover {
    color: #E88873;
}
.searchBar {
    display: flex;
    align-items: center;
    width: 80%;
}
.searchBar :first-child {
    display: flex; 
    align-items: center;
}
#searchFilter :first-child{
    margin-right: 7.5px;
}
.expandButton:hover {
    color: #E88873 !important;
    cursor: pointer;
}
.todoQuestionMark {
    color:#E0AC9D ;
}
.todoQuestionMark:hover {
    cursor: pointer;
    color: #E88873;
}
.todoExpandedTable {
    width:100%;
}
.todoCard {
    width: 40%;
}
.checkBox {
    size: 25;
    color: #E0AC9D;
}
.checkBox:hover {
    color: #E88873;
    cursor: pointer;
}
.checkedBox {
    color: green;
}
.purchasesIcon {
    color: #E0AC9D;
}
.purchasesIcon:hover {
    color: #E88873;
    cursor: pointer;
}

